# SecID-Client-SDK

./: AGENTS.md  CLAUDE.md  LICENSE  PUBLISHING.md  README.md
.github/workflows/: test.yml
go/: go.mod  secid.go  secid_test.go
python/: README.md  pyproject.toml  secid_client.py  test_secid_client.py
skills/build-a-client/: API-CONTRACT.md  BUILD-A-CLIENT.md  PROMPT-TEMPLATE.md  RESULT-HANDLING.md
tests/: README.md  fixtures.json
tests/conformance/: README.md  fixtures.json  schema.json
tests/conformance-harness/python/: run.py
typescript/: README.md  package-lock.json  package.json  secid-client.ts  tsconfig.json
typescript/src/: secid-cli.ts  secid-client.test.ts  secid-client.ts
