[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secid"
version = "1.0.0"
description = "Resolve security identifiers to URLs using the SecID API"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Cloud Security Alliance", email = "research@cloudsecurityalliance.org" },
]
keywords = ["security", "cve", "vulnerability", "secid", "cybersecurity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]

[project.scripts]
secid = "secid_client:main"

[project.urls]
Homepage = "https://github.com/CloudSecurityAlliance/SecID"
Repository = "https://github.com/CloudSecurityAlliance/SecID-Client-SDK"
Documentation = "https://secid.cloudsecurityalliance.org"
Issues = "https://github.com/CloudSecurityAlliance/SecID-Client-SDK/issues"

[tool.hatch.build.targets.wheel]
only-include = ["secid_client.py"]
